fix: make sure npm is enabled only if package-lock.json is enabled
Signed-off-by: Carlos Feria <2582866+carlosthe19916@users.noreply.github.com>